objects/SubProject_External_Reference__c.object
<CustomObject>
    <description>This object is used to store the Lookup relationships to external objects that are related to the Sub-Project like the Laser Artwork Order, NIS Mission etc.</description>
    <fields>
        <fullName>External_Entity_Name__c</fullName>
        <description>Display Record Type Name and external entity record name</description>
        <formula>CASE(RecordType.DeveloperName,
&apos;FO&apos;, LAO_ID__r.Name,
&apos;NIS&apos;, RecordType.DeveloperName+&apos; - &apos;+Mission_ID__c,
&apos;&apos;)</formula>
        <label>External Entity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAO_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the LAO Object</description>
        <label>FO ID</label>
        <referenceTo>Laser_Artwork_Order__c</referenceTo>
        <relationshipLabel>SubProject External References</relationshipLabel>
        <relationshipName>SubProject_External_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mission_ID__c</fullName>
        <description>Used for capturing NIS Mission ID</description>
        <label>Mission ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project (Pilot)</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>SubProject External References</relationshipLabel>
        <relationshipName>SubProject_External_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Record Type Name to be used for scheduled job handler</description>
        <formula>RecordType.Name</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubProject__c</fullName>
        <label>SubProject</label>
        <referenceTo>SubProject__c</referenceTo>
        <relationshipLabel>SubProject External References</relationshipLabel>
        <relationshipName>SubProject_External_References</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Mirrors the value of the Record Type field.  It’s existence is to support lookup dialogs, since record type fields can’t be searched within a lookup dialog.  Populated by workflow to match the record type of the record.</description>
        <label>Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>SubProject External Reference</label>
    <nameField>
        <displayFormat>SPER-{0000000}</displayFormat>
        <label>External Reference ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SubProject External References</pluralLabel>
    <recordTypes>
        <fullName>FO</fullName>
        <active>true</active>
        <description>Forms Order (a.k.a Laser Artwork Order)</description>
        <label>FO</label>
    </recordTypes>
    <recordTypes>
        <fullName>NIS</fullName>
        <active>true</active>
        <description>NIS record type</description>
        <label>NIS</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>